--- a/biografia.html
+++ b/biografia.html
@@ -1,153 +1,252 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Biografía - LP Fan Page</title>
-      <link rel="icon" href="img/mic.ico/microphone.png" type="image/x-icon" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Biografía - LP Fan Page</title>
+    <link rel="icon" href="img/mic.ico/microphone.png" type="image/x-icon" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
-  <link href="css/estilos.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/estilos.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- navbar: menú de navegación -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">LP Fan Page</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="biografia.html">Biografía</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="discografia.html">Discografía</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="galeria.html">Galería</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="api.html">Videoclips</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-  <!-- navbar: menú de navegación -->
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- sección 1: presentación visual -->
+    <section class="container my-5">
+      <div class="row align-items-center">
+        <div class="col-lg-5 mb-4 mb-lg-0 text-center">
+          <img
+            src="https://i.pinimg.com/474x/c5/25/39/c525392dc1f15b27c8349b1974c157a8.jpg"
+            alt="LP retrato"
+            class="img-fluid rounded shadow"
+            style="max-height: 350px; object-fit: cover"
+          />
+        </div>
+        <div class="col-lg-7">
+          <h1 class="mb-3 text-primary">Biografía de LP</h1>
+          <p class="lead">
+            Laura Pergolizzi, conocida como LP, es una de las voces más
+            originales y potentes del pop alternativo actual. Su historia es de
+            lucha, autenticidad y pasión por la música.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- sección 2: primeros años e inicios -->
+    <section class="container my-5">
+      <div class="row g-4">
+        <div class="col-md-6">
+          <div class="bg-white rounded shadow p-4 h-100">
+            <h3 class="text-primary mb-3">
+              <i class="bi bi-person-circle me-2"></i>¿Quién es LP?
+            </h3>
+            <p>
+              LP nació el 18 de marzo de 1981 en Long Island, Nueva York. Desde
+              pequeña mostró interés por la música y una personalidad única, que
+              luego se reflejaría en su estilo y presencia escénica.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="bg-white rounded shadow p-4 h-100">
+            <h3 class="text-primary mb-3">
+              <i class="bi bi-music-note-beamed me-2"></i>Sus inicios en la
+              música
+            </h3>
+            <p>
+              Comenzó su carrera en los años 2000 en la escena neoyorquina.
+              Durante mucho tiempo escribió canciones para artistas como
+              Rihanna, Christina Aguilera y Cher, antes de lanzarse como
+              solista.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- sección 3: éxito internacional -->
+    <section class="container my-5">
+      <div class="bg-white rounded shadow p-4">
+        <div class="row align-items-center">
+          <div class="col-md-8">
+            <h3 class="text-primary mb-3">
+              <i class="bi bi-globe-americas me-2"></i>Éxito internacional
+            </h3>
+            <p>
+              LP alcanzó el éxito mundial con su sencillo
+              <strong>"Lost on You"</strong> en 2016. La canción se volvió un
+              hit en Europa y América Latina, gracias a su interpretación
+              intensa y emotiva. Desde entonces, ha lanzado varios álbumes con
+              gran recepción crítica y ha realizado giras por todo el mundo.
+            </p>
+          </div>
+          <div class="col-md-4 text-center">
+            <img
+              src="https://i.scdn.co/image/ab67616d0000b273edd52840c88ba5e7163071cf"
+              alt="Lost on You"
+              class="img-fluid rounded"
+              style="max-height: 180px"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- sección 4: estilo y legado -->
+    <section class="container my-5">
+      <div class="bg-white rounded shadow p-4">
+        <div class="row align-items-center">
+          <div class="col-md-4 text-center mb-3 mb-md-0">
+            <img
+              src="https://cdn-images.dzcdn.net/images/artist/42a2ef16887e2cd54b07b848fdfd9619/1900x1900-000000-80-0-0.jpg"
+              alt="LP estilo"
+              class="img-fluid rounded"
+              style="max-height: 180px"
+            />
+          </div>
+          <div class="col-md-8">
+            <h3 class="text-primary mb-3">
+              <i class="bi bi-stars me-2"></i>Estilo y legado
+            </h3>
+            <p>
+              El estilo de LP mezcla rock, folk, pop y soul, con una estética
+              visual rebelde y personal. Es considerada una inspiración para
+              artistas emergentes por su autenticidad, su lucha contra los
+              estereotipos y su apertura sobre la identidad de género.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ...footer... -->
+    <footer class="bg-dark text-white py-4">
       <div class="container">
-        <a class="navbar-brand" href="index.html">LP Fan Page</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-            <li class="nav-item"><a class="nav-link active" href="biografia.html">Biografía</a></li>
-            <li class="nav-item"><a class="nav-link" href="discografia.html">Discografía</a></li>
-            <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-            <li class="nav-item"><a class="nav-link" href="api.html">Videoclips</a></li>
-            <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-          </ul>
+        <div class="row">
+          <div class="col-md-4">
+            <h5 class="text-primary">Sobre LP Fan Page</h5>
+            <p>
+              Un sitio dedicado a los fans de LP, donde puedes explorar su
+              música, biografía, galería y más.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h5 class="text-primary">Enlaces rápidos</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="index.html" class="text-primary text-decoration-none"
+                  >Inicio</a
+                >
+              </li>
+              <li>
+                <a
+                  href="biografia.html"
+                  class="text-primary text-decoration-none"
+                  >Biografía</a
+                >
+              </li>
+              <li>
+                <a
+                  href="discografia.html"
+                  class="text-primary text-decoration-none"
+                  >Discografía</a
+                >
+              </li>
+              <li>
+                <a href="galeria.html" class="text-primary text-decoration-none"
+                  >Galería</a
+                >
+              </li>
+              <li>
+                <a href="api.html" class="text-primary text-decoration-none"
+                  >Videoclips</a
+                >
+              </li>
+              <li>
+                <a
+                  href="contacto.html"
+                  class="text-primary text-decoration-none"
+                  >Contacto</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4 text-center">
+            <h5 class="text-primary">Síguenos</h5>
+            <a
+              href="https://www.instagram.com/iamlpofficial/"
+              target="_blank"
+              class="text-lp me-3"
+            >
+              <i class="bi bi-instagram" style="font-size: 1.5rem"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/iamLP/"
+              target="_blank"
+              class="text-lp me-3"
+            >
+              <i class="bi bi-facebook" style="font-size: 1.5rem"></i>
+            </a>
+            <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
+              <i class="bi bi-twitter" style="font-size: 1.5rem"></i>
+            </a>
+          </div>
+        </div>
+        <div class="text-center mt-3">
+          <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
         </div>
       </div>
-    </nav>
-  </header>
-
-  <!-- sección 1: presentación visual -->
-  <section class="container my-5">
-    <div class="row align-items-center">
-      <div class="col-lg-5 mb-4 mb-lg-0 text-center">
-        <img src="https://i.pinimg.com/474x/c5/25/39/c525392dc1f15b27c8349b1974c157a8.jpg" alt="LP retrato" class="img-fluid rounded shadow" style="max-height: 350px; object-fit: cover;">
-      </div>
-      <div class="col-lg-7">
-        <h1 class="mb-3 text-primary">Biografía de LP</h1>
-        <p class="lead">Laura Pergolizzi, conocida como LP, es una de las voces más originales y potentes del pop alternativo actual. Su historia es de lucha, autenticidad y pasión por la música.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- sección 2: primeros años e inicios -->
-  <section class="container my-5">
-    <div class="row g-4">
-      <div class="col-md-6">
-        <div class="bg-white rounded shadow p-4 h-100">
-          <h3 class="text-primary mb-3"><i class="bi bi-person-circle me-2"></i>¿Quién es LP?</h3>
-          <p>LP nació el 18 de marzo de 1981 en Long Island, Nueva York. Desde pequeña mostró interés por la música y una personalidad única, que luego se reflejaría en su estilo y presencia escénica.</p>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="bg-white rounded shadow p-4 h-100">
-          <h3 class="text-primary mb-3"><i class="bi bi-music-note-beamed me-2"></i>Sus inicios en la música</h3>
-          <p>Comenzó su carrera en los años 2000 en la escena neoyorquina. Durante mucho tiempo escribió canciones para artistas como Rihanna, Christina Aguilera y Cher, antes de lanzarse como solista.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- sección 3: éxito internacional -->
-  <section class="container my-5">
-    <div class="bg-white rounded shadow p-4">
-      <div class="row align-items-center">
-        <div class="col-md-8">
-          <h3 class="text-primary mb-3"><i class="bi bi-globe-americas me-2"></i>Éxito internacional</h3>
-          <p>LP alcanzó el éxito mundial con su sencillo <strong>"Lost on You"</strong> en 2016. La canción se volvió un hit en Europa y América Latina, gracias a su interpretación intensa y emotiva. Desde entonces, ha lanzado varios álbumes con gran recepción crítica y ha realizado giras por todo el mundo.</p>
-        </div>
-        <div class="col-md-4 text-center">
-          <img src="https://i.scdn.co/image/ab67616d0000b273edd52840c88ba5e7163071cf" alt="Lost on You" class="img-fluid rounded" style="max-height: 180px;">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- sección 4: estilo y legado -->
-  <section class="container my-5">
-    <div class="bg-white rounded shadow p-4">
-      <div class="row align-items-center">
-        <div class="col-md-4 text-center mb-3 mb-md-0">
-          <img src="https://cdn-images.dzcdn.net/images/artist/42a2ef16887e2cd54b07b848fdfd9619/1900x1900-000000-80-0-0.jpg" alt="LP estilo" class="img-fluid rounded" style="max-height: 180px;">
-        </div>
-        <div class="col-md-8">
-          <h3 class="text-primary mb-3"><i class="bi bi-stars me-2"></i>Estilo y legado</h3>
-          <p>El estilo de LP mezcla rock, folk, pop y soul, con una estética visual rebelde y personal. Es considerada una inspiración para artistas emergentes por su autenticidad, su lucha contra los estereotipos y su apertura sobre la identidad de género.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-<!-- ...footer... -->
-<footer class="bg-dark text-white py-4">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <h5 class="text-primary">Sobre LP Fan Page</h5>
-        <p>
-          Un sitio dedicado a los fans de LP, donde puedes explorar su
-          música, biografía, galería y más.
-        </p>
-      </div>
-      <div class="col-md-4">
-        <h5 class="text-primary">Enlaces rápidos</h5>
-        <ul class="list-unstyled">
-          <li>
-            <a href="index.html" class="text-primary text-decoration-none">Inicio</a>
-          </li>
-          <li>
-            <a href="biografia.html" class="text-primary text-decoration-none">Biografía</a>
-          </li>
-          <li>
-            <a href="discografia.html" class="text-primary text-decoration-none">Discografía</a>
-          </li>
-          <li>
-            <a href="galeria.html" class="text-primary text-decoration-none">Galería</a>
-          </li>
-          <li>
-            <a href="api.html" class="text-primary text-decoration-none">Videoclips</a>
-          </li>
-          <li>
-            <a href="contacto.html" class="text-primary text-decoration-none">Contacto</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-4 text-center">
-        <h5 class="text-primary">Síguenos</h5>
-        <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-lp me-3">
-          <i class="bi bi-instagram" style="font-size: 1.5rem"></i>
-        </a>
-        <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-lp me-3">
-          <i class="bi bi-facebook" style="font-size: 1.5rem"></i>
-        </a>
-        <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
-          <i class="bi bi-twitter" style="font-size: 1.5rem"></i>
-        </a>
-      </div>
-    </div>
-    <div class="text-center mt-3">
-      <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
-    </div>
-  </div>
-</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
