--- a/galeria.html
+++ b/galeria.html
@@ -245,91 +245,131 @@
         }
       </style>
 
-<!-- sección 4: curiosidades -->
-<section>
-  <h2 class="text-center mb-4 text-primary">Ver más de LP...</h2>
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col d-flex justify-content-center">
-      <div class="p-2 d-flex align-items-center justify-content-center" style="max-width: 240px; margin: 0 auto;">
-        <!-- Primer post de Instagram -->
-        <blockquote
-          class="instagram-media"
-          data-instgrm-permalink="https://www.instagram.com/p/C69XKOPPQQ-/?utm_source=ig_embed&amp;utm_campaign=loading"
-          data-instgrm-version="14"
-          style="width:100%; min-width:180px; max-width:240px; margin:0 auto;"
-        ></blockquote>
-      </div>
-    </div>
-    <div class="col d-flex justify-content-center">
-      <div class="p-2 d-flex align-items-center justify-content-center" style="max-width: 240px; margin: 0 auto;">
-        <!-- Segundo post de Instagram -->
-        <blockquote
-          class="instagram-media"
-          data-instgrm-permalink="https://www.instagram.com/p/C1S1aOxPDaA/?utm_source=ig_embed&amp;utm_campaign=loading"
-          data-instgrm-version="14"
-          style="width:100%; min-width:180px; max-width:240px; margin:0 auto;"
-        ></blockquote>
-      </div>
-    </div>
-  </div>
-</section>
-<script async src="//www.instagram.com/embed.js"></script>
-
-
+      <!-- sección 4: curiosidades -->
+      <section>
+        <h2 class="text-center mb-4 text-primary">Ver más de LP...</h2>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col d-flex justify-content-center">
+            <div
+              class="p-2 d-flex align-items-center justify-content-center"
+              style="max-width: 240px; margin: 0 auto"
+            >
+              <!-- Primer post de Instagram -->
+              <blockquote
+                class="instagram-media"
+                data-instgrm-permalink="https://www.instagram.com/p/C69XKOPPQQ-/?utm_source=ig_embed&amp;utm_campaign=loading"
+                data-instgrm-version="14"
+                style="
+                  width: 100%;
+                  min-width: 180px;
+                  max-width: 240px;
+                  margin: 0 auto;
+                "
+              ></blockquote>
+            </div>
+          </div>
+          <div class="col d-flex justify-content-center">
+            <div
+              class="p-2 d-flex align-items-center justify-content-center"
+              style="max-width: 240px; margin: 0 auto"
+            >
+              <!-- Segundo post de Instagram -->
+              <blockquote
+                class="instagram-media"
+                data-instgrm-permalink="https://www.instagram.com/p/C1S1aOxPDaA/?utm_source=ig_embed&amp;utm_campaign=loading"
+                data-instgrm-version="14"
+                style="
+                  width: 100%;
+                  min-width: 180px;
+                  max-width: 240px;
+                  margin: 0 auto;
+                "
+              ></blockquote>
+            </div>
+          </div>
+        </div>
+      </section>
+      <script async src="//www.instagram.com/embed.js"></script>
     </main>
 
-<!-- ...footer... -->
-<footer class="bg-dark text-white py-4">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4">
-        <h5 class="text-primary">Sobre LP Fan Page</h5>
-        <p>
-          Un sitio dedicado a los fans de LP, donde puedes explorar su
-          música, biografía, galería y más.
-        </p>
+    <!-- ...footer... -->
+    <footer class="bg-dark text-white py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h5 class="text-primary">Sobre LP Fan Page</h5>
+            <p>
+              Un sitio dedicado a los fans de LP, donde puedes explorar su
+              música, biografía, galería y más.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <h5 class="text-primary">Enlaces rápidos</h5>
+            <ul class="list-unstyled">
+              <li>
+                <a href="index.html" class="text-primary text-decoration-none"
+                  >Inicio</a
+                >
+              </li>
+              <li>
+                <a
+                  href="biografia.html"
+                  class="text-primary text-decoration-none"
+                  >Biografía</a
+                >
+              </li>
+              <li>
+                <a
+                  href="discografia.html"
+                  class="text-primary text-decoration-none"
+                  >Discografía</a
+                >
+              </li>
+              <li>
+                <a href="galeria.html" class="text-primary text-decoration-none"
+                  >Galería</a
+                >
+              </li>
+              <li>
+                <a href="api.html" class="text-primary text-decoration-none"
+                  >Videoclips</a
+                >
+              </li>
+              <li>
+                <a
+                  href="contacto.html"
+                  class="text-primary text-decoration-none"
+                  >Contacto</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4 text-center">
+            <h5 class="text-primary">Síguenos</h5>
+            <a
+              href="https://www.instagram.com/iamlpofficial/"
+              target="_blank"
+              class="text-lp me-3"
+            >
+              <i class="bi bi-instagram" style="font-size: 1.5rem"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/iamLP/"
+              target="_blank"
+              class="text-lp me-3"
+            >
+              <i class="bi bi-facebook" style="font-size: 1.5rem"></i>
+            </a>
+            <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
+              <i class="bi bi-twitter" style="font-size: 1.5rem"></i>
+            </a>
+          </div>
+        </div>
+        <div class="text-center mt-3">
+          <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
+        </div>
       </div>
-      <div class="col-md-4">
-        <h5 class="text-primary">Enlaces rápidos</h5>
-        <ul class="list-unstyled">
-          <li>
-            <a href="index.html" class="text-primary text-decoration-none">Inicio</a>
-          </li>
-          <li>
-            <a href="biografia.html" class="text-primary text-decoration-none">Biografía</a>
-          </li>
-          <li>
-            <a href="discografia.html" class="text-primary text-decoration-none">Discografía</a>
-          </li>
-          <li>
-            <a href="galeria.html" class="text-primary text-decoration-none">Galería</a>
-          </li>
-          <li>
-            <a href="api.html" class="text-primary text-decoration-none">Videoclips</a>
-          </li>
-          <li>
-            <a href="contacto.html" class="text-primary text-decoration-none">Contacto</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-4 text-center">
-        <h5 class="text-primary">Síguenos</h5>
-        <a href="https://www.instagram.com/iamlpofficial/" target="_blank" class="text-lp me-3">
-          <i class="bi bi-instagram" style="font-size: 1.5rem"></i>
-        </a>
-        <a href="https://www.facebook.com/iamLP/" target="_blank" class="text-lp me-3">
-          <i class="bi bi-facebook" style="font-size: 1.5rem"></i>
-        </a>
-        <a href="https://twitter.com/iamlp" target="_blank" class="text-lp">
-          <i class="bi bi-twitter" style="font-size: 1.5rem"></i>
-        </a>
-      </div>
-    </div>
-    <div class="text-center mt-3">
-      <p>&copy; 2025 LP Fan Page. Todos los derechos reservados.</p>
-    </div>
-  </div>
-</footer>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
